--- a/main.css
+++ b/main.css
@@ -8,6 +8,7 @@ body{
     font-family: 'Courier New', Courier, monospace;
 width: 100vw;
 height: 100vh;
+background-color: #333;
 
 
 }
@@ -17,6 +18,10 @@ height: 100vh;
    margin-top: 40px;
    padding: 20px;
    background-color: #f6f6f6;
+   border-radius: 10px;
+   box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+   
+
 
 }
 .repo-header{
@@ -57,7 +62,7 @@ color: #fff;
 cursor: pointer;
 }
 .gitrerpo-showing{
-    background-color: #ffffff;
+    background-color: #eee;
     padding: 10px;
     color: #000;
     margin-left: -15px;
