--- a/main.css
+++ b/main.css
@@ -62,11 +62,44 @@ color: #fff;
 cursor: pointer;
 }
 .gitrerpo-showing{
-    background-color: #eee;
-    padding: 10px;
+    background-color: #999;
+    padding: 5px;
     color: #000;
     margin-left: -15px;
     margin-right: -15px;
+    border-radius: 5px;
 
+
+}
+.main{
+    padding: 10px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #fff;
+    border-radius: 5px;
+    margin-bottom: 10px;
+
+}
+.main  .info span{
+    font-size: 12px;
+    display: inline-block;
+    padding: 7px 10px ;
+   
+    border-radius: 4px;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+
+
+}
+.span1{
+    background-color:rgb(79, 8, 8) ;
+    color: #fff;
+}
+.span2{
+    background-color: rgb(23, 23, 212);
+}
+a{
+    text-decoration: none;
+    color: #fff;
 
 }
